# lesson-machine-learning

./: README.md  assigment_1.py  assignment-1.ipynb  pyproject.toml
